- The hostid of the generating system will be stored in /etc/hostid on the
  initramfs.
- 'refresh' option has been added so that if your initramfs has a stale
  zpool.cache and you need to boot, you can use it to ignore that cachefile
  and automatically install a clean zpool.cache into your system.
- util-linux programs, zsplat, ztest, zstreamdump, zpios, zinject, zhack
  have been removed.

4.1.0
---------
- The application can now be ran from any directory
- The application has been redesigned so that it's execution is cleaner
- Fixed a bug where 'lmodules' wasn't being set correctly
- The application will generate a 16 digit random number temporary directory,
  in /tmp to minimize folder/file collisions (i.e: /tmp/1786-2475-3902-4380/)
- The application has been changed from procedural to object oriented.
- Fixed a minor bug where the err_mod_dexi() wasnt being found
- Other nice improvements that I can't remember...

4.0.3
---------
- The application will now ask you a max of three times to enter your
  correct decryption password before throwing you into rescue shell.

4.0.2
---------
- Fixed a bug where parameters passed to the kernel including a "=" weren't
  being parsed correctly (ex: options="subvol=root")

4.0.1
---------
- Fixed a minor bug where zpool.cache wasn't being copied into the rootfs
  because the /etc/zfs directory didn't exist in the initramfs during import.
- Implemented a temporary fix function to detect the location of kmod.
  Once the program's structure is better designed this function can be placed
  in a more appropriate location.
- Gentoo will be supported again.

4.0.0
---------
- Added the ability to pass mount "options" for '/' via initramfs.
- Major redesign of application. New functions written for copying, etc
- Refactoring was done all around the application
- Fixed a bug where modules in the "addon_mods" list weren't being loaded
- Fixed a bug where job control wasn't working properly